[package]
name = "font_encoder"
version = "2.0.0"                               # Use the same version as gb-vwf. Always. It'll avoid confusing people.
edition = "2021"
repository = "https://github.com/ISSOtm/gb-vwf"
rust-version = "1.70"

[dependencies]
plumers = "1.0.2"
slicedisplay = "0.2.2"
xflags = "0.3.2"
